--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -13,31 +13,23 @@
 * Inbox
 * Next Action
 ** TODO [#A] 月度财务收支                                           :event:
-DEADLINE: <2022-05-12 周四 23:00 +1m> SCHEDULED: <2022-05-12 周四 09:00 +1m>
+DEADLINE: <2022-06-12 周日 23:00 +1m> SCHEDULED: <2022-06-12 周日 09:00 +1m>
 :PROPERTIES:
 :LOGGING: DONE(@)
 :END:
+- State "DONE"       from "TODO"       [2022-05-17 周二 16:00] \\
+  house rent: 2000, game: 30, takeout: commute: 22, shopping: 2821, takeout: 707
+  total: 5580
 - State "DONE"       from "TODO"       [2022-04-11 周一 09:19] \\
   house rent: 2000, game: 90, takeout: 727, fee: 218, shopping: 828, commute: 12, course: -1650
   total: 5525
 - State "DONE"       from "TODO"       [2022-03-13 周日 08:57] \\
-| date         | purpose    |  value |
-|--------------+------------+--------|
-| [2022-04-12] | house rent |  -2000 |
-| [2022-04-13] | buy guitar |  -2500 |
-| [2022-04-14] | shopping   |    -10 |
-| [2022-04-16] | shopping   |    -20 |
-| [2022-04-17] | commute    |    -11 |
-| [2022-04-17] | dinner     |   -127 |
-| [2022-04-22] | shopping   |   -2.5 |
-| [2022-04-27] | shopping   |   -2.5 |
-| [2022-04-29] | shopping   |    -86 |
-| [2022-04-30] | takeout    |    -80 |
-| [2022-05-01] | takeout    |    -60 |
-| [2022-05-02] | takeout    |    -60 |
-| [2022-05-03] | takeout    |    -60 |
-| [2022-05-04] | takeout    |    -60 |
-|              |            | -5079. |
+| date         | purpose    |   value |
+|--------------+------------+---------|
+| [2022-05-17] | house rent |   -2500 |
+| [2022-05-17] | shopping   |    -3.3 |
+| [2022-05-18] | shopping   |    -1.3 |
+|              |            | -2503.3 |
 #+TBLFM: @>$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
 house rent: 2000, game: 445, takeout: 284, fee: 218, shopping: 1373, commute: 37
@@ -53,12 +45,25 @@ total: 4357
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-05-16 周一 23:00 ++1w> SCHEDULED: <2022-05-13 周五 18:00 ++1w>
+DEADLINE: <2022-05-30 周一 23:00 ++1w> SCHEDULED: <2022-05-27 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-05-07 周六 20:36]
+:LAST_REPEAT: [2022-05-23 周一 09:34]
 :END:
+- State "DONE"       from "TODO"       [2022-05-23 周一 09:34] \\
+  1. 拆分站位和场景
+     - 站位分为根据战前战中分为两个ui
+     - 战前战中公用一个场景
+  2. 分析处理战斗开始加载速度较慢问题
+  3. 初步实现总伤害跳字表现
+  ---------------------------------------
+  1. 跟tiger和阿峰重温terraria
+- State "DONE"       from "TODO"       [2022-05-14 周六 19:27] \\
+  1. 完成行动条工单
+  2. 拆分占位和场景ui
+  -------------------------------
+  1. 下了一周的雨, 好久没跑步了
 - State "DONE"       from "TODO"       [2022-05-07 周六 20:36] \\
   1. 重做行动速度条, 采用服务器协议而不是客户端分析
   2. 重做行动速度条UI, 处理新版滑动动画
@@ -704,12 +709,29 @@ DEADLINE: <2022-05-16 周一 23:00 ++1w> SCHEDULED: <2022-05-13 周五 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月报告及归档                                         :event:
-DEADLINE: <2022-04-30 周六 23:00 ++1m> SCHEDULED: <2022-04-30 周六 09:00 ++1m>
+DEADLINE: <2022-05-30 周一 23:00 ++1m> SCHEDULED: <2022-05-30 周一 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-04-01 周五 17:26]
+:LAST_REPEAT: [2022-05-09 周一 09:56]
 :END:
+- State "DONE"       from "TODO"       [2022-05-09 周一 09:56] \\
+  工作上:
+  1. UI编辑器扩展
+     1. 更加丰富的组件, 完善组价扩展接口
+        - 点击吞噬控件
+        - 点击提示控件
+     2. UI控件优化
+        - 复选按钮添加常用信号接口欧
+        - 添加复用滚动框到编辑器中
+        - 网格新增编辑器选项
+  2. 处理游戏内部代码跳转失效问题
+  3. 蓝图编辑器扩展
+     1. 编辑器端新增简谐振动动作
+     2. pubmagic新增简谐振动指令处理逻辑
+  4. 编写初版行动条, 以客户端分析未来服务端指令作为主要实现方案
+  生活上:
+  1. 学吉他, 报了个吉他班
 - State "DONE"       from "TODO"       [2022-04-01 周五 17:26] \\
   工作上:
   1. 编写季度报告
@@ -873,12 +895,13 @@ CLOCK: [2022-02-28 周一 13:20]--[2022-02-28 周一 13:45] =>  0:25
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
 ** TODO [#A] 每周学习晨星网投资教程一篇 [1/1]                       :event:
-DEADLINE: <2022-05-01 周日 23:59 +1w> SCHEDULED: <2022-04-25 周一 09:00 +1w>
+DEADLINE: <2022-05-22 周日 23:59 ++1w> SCHEDULED: <2022-05-16 周一 09:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-04-18 周一 12:10]
+:LAST_REPEAT: [2022-05-11 周三 15:07]
 :END:
+- State "DONE"       from "TODO"       [2022-05-11 周三 15:07]
 - State "DONE"       from "TODO"       [2022-04-18 周一 12:10]
 - State "DONE"       from "TODO"       [2022-04-12 周二 20:41]
 - State "DONE"       from "TODO"       [2022-04-02 周六 20:49]
@@ -908,11 +931,15 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
-** TODO [#A] 减肥 [0/3]                                             :event:
-SCHEDULED: <2022-05-02 周一 17:27 +1w>
+** TODO [#A] 减肥 [3/3]                                             :event:
+SCHEDULED: <2022-05-23 周一 17:27 ++1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-04-29 周五 15:02]
+:LAST_REPEAT: [2022-05-23 周一 09:27]
 :END:
+- State "DONE"       from "TODO"       [2022-05-23 周一 09:27] \\
+  4.5, 70.0kg, 下雨
+- State "DONE"       from "TODO"       [2022-05-16 周一 13:13] \\
+  4.0, 70.25kg 一直下雨
 - State "DONE"       from "TODO"       [2022-04-29 周五 15:02] \\
   没跑, 痔疮没好
 - State "DONE"       from "TODO"       [2022-04-25 周一 09:55] \\
@@ -932,14 +959,18 @@ SCHEDULED: <2022-05-02 周一 17:27 +1w>
 - State "DONE"       from "TODO"       [2022-03-06 周日 22:06] \\
   2.5->3.5->4.0, 76.1kg
 目前77kg, 计划减到65kg, 计划每周减0.5kg, 需要24个月
-- [ ] 跑步一次 5.0km
-- [ ] 跑步一次 5.0km
-- [ ] 跑步一次 5.0km
+- [X] 跑步一次 4.0km
+- [X] 跑步一次 5.0km
+- [X] 跑步一次 5.0km
 ** TODO [#A] 吉他学习                                               :event:
-SCHEDULED: <2022-04-24 周日 17:00 ++1w>
+SCHEDULED: <2022-05-22 周日 17:00 ++1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-04-18 周一 09:22]
+:LAST_REPEAT: [2022-05-16 周一 13:12]
 :END:
+- State "DONE"       from "TODO"       [2022-05-16 周一 13:12] \\
+  童年, 月亮代表我的心, 和弦
+- State "DONE"       from "TODO"       [2022-05-09 周一 09:33] \\
+  送别, 四季歌, 低音到高音音阶
 - State "DONE"       from "TODO"       [2022-04-18 周一 09:22] \\
   爬格子, 音阶, 小星星, 生日快乐歌
 广州柿子音乐培训, 吉他弹唱课程12期(45分钟一对一), 每周日下午5点开始
