--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -931,7 +931,7 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
-** TODO [#A] 减肥 [3/3]                                             :event:
+** TODO [#A] 减肥 [1/3]                                             :event:
 SCHEDULED: <2022-05-23 周一 17:27 ++1w>
 :PROPERTIES:
 :LAST_REPEAT: [2022-05-23 周一 09:27]
@@ -959,9 +959,9 @@ SCHEDULED: <2022-05-23 周一 17:27 ++1w>
 - State "DONE"       from "TODO"       [2022-03-06 周日 22:06] \\
   2.5->3.5->4.0, 76.1kg
 目前77kg, 计划减到65kg, 计划每周减0.5kg, 需要24个月
-- [X] 跑步一次 4.0km
-- [X] 跑步一次 5.0km
-- [X] 跑步一次 5.0km
+- [X] 跑步一次 3.5km
+- [ ] 跑步一次 5.0km
+- [ ] 跑步一次 5.0km
 ** TODO [#A] 吉他学习                                               :event:
 SCHEDULED: <2022-05-22 周日 17:00 ++1w>
 :PROPERTIES:
