[py] 支持连续线段绘制

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -26,10 +26,15 @@ DEADLINE: <2022-06-12 周日 23:00 +1m> SCHEDULED: <2022-06-12 周日 09:00 +1m>
 - State "DONE"       from "TODO"       [2022-03-13 周日 08:57] \\
 | date         | purpose    |   value |
 |--------------+------------+---------|
-| [2022-05-17] | house rent |   -2500 |
+| [2022-05-17] | house rent |   -2000 |
 | [2022-05-17] | shopping   |    -3.3 |
 | [2022-05-18] | shopping   |    -1.3 |
-|              |            | -2503.3 |
+| [2022-05-21] | takeout    | -80     |
+| [2022-05-25] | shopping   |    -3.5 |
+| [2022-05-28] | commute    |     -20 |
+| [2022-05-28] | shopping   |     -60 |
+| [2022-05-29] | takeout    |     -80 |
+|              |            | -2168.1 |
 #+TBLFM: @>$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
 house rent: 2000, game: 445, takeout: 284, fee: 218, shopping: 1373, commute: 37
@@ -45,19 +50,29 @@ total: 4357
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-05-30 周一 23:00 ++1w> SCHEDULED: <2022-05-27 周五 18:00 ++1w>
+DEADLINE: <2022-06-06 周一 23:00 ++1w> SCHEDULED: <2022-06-03 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-05-23 周一 09:34]
+:LAST_REPEAT: [2022-05-30 周一 09:17]
 :END:
+- State "DONE"       from "TODO"       [2022-05-30 周一 09:17] \\
+  1. 完善总伤害跳字表现
+  2. 优化英雄详情技能槽位
+     - 为技能槽新增特化的构建形式以适应不同的场景
+     - 技能图标新增一种无法装备的显示形式
+  3. 协助处理新spine显示问题
+     - (0, 0)锚点和剑与远征模型不同, 剑与远征的的(0, 0)位于spine的中底部, 而这批资源位于左下角
+     - 新资源默认设置了y轴翻转
+  -------------------------------
+  1. 驾照体检也太敷衍了, 居然只测试一个视力
 - State "DONE"       from "TODO"       [2022-05-23 周一 09:34] \\
   1. 拆分站位和场景
      - 站位分为根据战前战中分为两个ui
      - 战前战中公用一个场景
   2. 分析处理战斗开始加载速度较慢问题
   3. 初步实现总伤害跳字表现
-  ---------------------------------------
+  -------------------------------
   1. 跟tiger和阿峰重温terraria
 - State "DONE"       from "TODO"       [2022-05-14 周六 19:27] \\
   1. 完成行动条工单
@@ -709,12 +724,33 @@ DEADLINE: <2022-05-30 周一 23:00 ++1w> SCHEDULED: <2022-05-27 周五 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月报告及归档                                         :event:
-DEADLINE: <2022-05-30 周一 23:00 ++1m> SCHEDULED: <2022-05-30 周一 09:00 ++1m>
+DEADLINE: <2022-06-30 周四 23:00 ++1m> SCHEDULED: <2022-06-30 周四 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-05-09 周一 09:56]
+:LAST_REPEAT: [2022-05-30 周一 10:35]
 :END:
+- State "DONE"       from "TODO"       [2022-05-30 周一 10:35] \\
+  工作上:
+  1. 完成战斗进度条
+     - 通过对多个战斗协议的监听来实现角色释放技能时在上方同步显示进度动画的功能
+     - 通过程序动画来表现进度条的移动
+     - 通过头像覆盖图层来表示角色的死亡
+  2. 优化站前表现
+     - 部分战斗站前会发送大量的无效协议, 通过合并发送一次来降低战前的空白时间
+  3. 拆分站位和场景
+     - 将站位从场景中分里处理, 分为战前占位和战中占位
+     - 将战前战中场景合并为一个场景
+     - 通过挂载点在实现站位合理插入到场景的前景, 背景之中
+  4. 跳字显示总伤害
+     - 每次从服务器收到伤害数字协议, 根据伤害来源决定是否累计总伤害数字
+     - 每个技能结束, 清理所有累计伤害数字
+     - 采用ui动画+spine动画的形式来表现总伤害变化
+  5. 优化英雄详情技能槽位
+     - 技能槽位支持在特殊界面的特殊布局
+     - 技能图标支持显示无法装配特性
+  生活上:
+  1. 这个痔疮, emmm, 真正让人体会到了什么叫做坐卧难安鸭
 - State "DONE"       from "TODO"       [2022-05-09 周一 09:56] \\
   工作上:
   1. UI编辑器扩展
@@ -932,10 +968,12 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
 ** TODO [#A] 减肥 [1/3]                                             :event:
-SCHEDULED: <2022-05-23 周一 17:27 ++1w>
+SCHEDULED: <2022-05-30 周一 17:27 ++1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-05-23 周一 09:27]
+:LAST_REPEAT: [2022-05-30 周一 09:13]
 :END:
+- State "DONE"       from "TODO"       [2022-05-30 周一 09:13] \\
+  3.5, 69.70kg, 下雨
 - State "DONE"       from "TODO"       [2022-05-23 周一 09:27] \\
   4.5, 70.0kg, 下雨
 - State "DONE"       from "TODO"       [2022-05-16 周一 13:13] \\
@@ -959,14 +997,16 @@ SCHEDULED: <2022-05-23 周一 17:27 ++1w>
 - State "DONE"       from "TODO"       [2022-03-06 周日 22:06] \\
   2.5->3.5->4.0, 76.1kg
 目前77kg, 计划减到65kg, 计划每周减0.5kg, 需要24个月
-- [X] 跑步一次 3.5km
+- [X] 跑步一次 4.0km
 - [ ] 跑步一次 5.0km
 - [ ] 跑步一次 5.0km
 ** TODO [#A] 吉他学习                                               :event:
-SCHEDULED: <2022-05-22 周日 17:00 ++1w>
+SCHEDULED: <2022-06-05 周日 17:00 ++1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-05-16 周一 13:12]
+:LAST_REPEAT: [2022-05-30 周一 09:12]
 :END:
+- State "DONE"       from "TODO"       [2022-05-30 周一 09:12] \\
+  和弦转换, am和弦预习, 下次上课+10m
 - State "DONE"       from "TODO"       [2022-05-16 周一 13:12] \\
   童年, 月亮代表我的心, 和弦
 - State "DONE"       from "TODO"       [2022-05-09 周一 09:33] \\
