--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,10 +14,11 @@
 * Inbox
 * Next Action
 ** TODO [#C] 每周完成leetcode一道题 [1/1]                           :learn:
-SCHEDULED: <2022-05-30 周一 09:00 ++1w>
+SCHEDULED: <2022-06-06 周一 09:00 ++1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-05-26 周四 15:44]
+:LAST_REPEAT: [2022-05-30 周一 14:40]
 :END:
+- State "DONE"       from "TODO"       [2022-05-30 周一 14:40]
 - State "DONE"       from "TODO"       [2022-05-26 周四 15:44]
 - State "DONE"       from "TODO"       [2022-05-18 周三 16:31]
 - State "DONE"       from "TODO"       [2022-05-10 周二 09:15]
@@ -89,10 +90,11 @@ SCHEDULED: <2022-05-16 周一 ++1w>
 - State "DONE"       from "TODO"       [2022-04-14 周四 20:36]
 - [X] :: 学习第三章
 ** TODO [#A] 每月一篇技术文档                                          :m8:
-DEADLINE: <2022-05-30 周一 ++1m> SCHEDULED: <2022-05-01 周日 09:27 ++1m>
+DEADLINE: <2022-06-30 周四 ++1m> SCHEDULED: <2022-06-01 周三 09:27 ++1m>
 :PROPERTIES:
-:LAST_REPEAT: [2022-04-13 周三 18:05]
+:LAST_REPEAT: [2022-05-31 周二 13:18]
 :END:
+- State "DONE"       from "TODO"       [2022-05-31 周二 13:18]
 - State "DONE"       from "TODO"       [2022-04-13 周三 18:05]
 - State "DONE"       from "TODO"       [2022-03-08 周二 14:29]
 :LOGBOOK:
@@ -109,11 +111,12 @@ CLOCK: [2022-03-07 周一 16:50]--[2022-03-07 周一 17:15] =>  0:25
 :END:
 - [X] 第一篇
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2022-05-28 周六 18:00 ++1w> DEADLINE: <2022-05-30 周一 12:00 ++1w>
+SCHEDULED: <2022-06-04 周六 18:00 ++1w> DEADLINE: <2022-06-06 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-05-23 周一 09:34]
+:LAST_REPEAT: [2022-05-30 周一 09:17]
 :END:
+- State "DONE"       from "TODO"       [2022-05-30 周一 09:17]
 - State "DONE"       from "TODO"       [2022-05-23 周一 09:34]
 - State "DONE"       from "TODO"       [2022-05-14 周六 19:28]
 - State "DONE"       from "TODO"       [2022-05-07 周六 20:37]
@@ -177,14 +180,29 @@ SCHEDULED: <2022-05-28 周六 18:00 ++1w> DEADLINE: <2022-05-30 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** DONE [#A] 拆分站位和场景                                            :m8:
+** Archive                                                        :ARCHIVE:
+*** DONE [#A] 拆分站位和场景                                           :m8:
 CLOSED: [2022-05-18 周三 16:30] SCHEDULED: <2022-05-16 周一 13:12>
-** DONE [#A] 优化战前表现                                               :m8:
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-05-30 周一 09:17
+:END:
+*** DONE [#A] 优化战前表现                                             :m8:
 CLOSED: [2022-05-20 周五 15:07] SCHEDULED: <2022-05-18 周三 16:32>
-** DONE [#A] 跳字显示总伤害                                             :m8:
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-05-30 周一 09:17
+:END:
+*** DONE [#A] 跳字显示总伤害                                           :m8:
 CLOSED: [2022-05-26 周四 14:33] SCHEDULED: <2022-05-20 周五 09:00>
-** DONE [#A] 优化英雄详情技能槽位                                      :m8:
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-05-30 周一 09:17
+:END:
+*** DONE [#A] 优化英雄详情技能槽位                                     :m8:
 CLOSED: [2022-05-26 周四 14:33] SCHEDULED: <2022-05-26 周四 09:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-05-30 周一 09:17
+:END:
+** TODO [#A] 编写季度报告                                              :m8:
+SCHEDULED: <2022-05-31 周二 14:00>
 * Appointment
 * Project
 ** Archive                                                         :ARCHIVE:
