[py] 1.将渲染模式改为由摄像机驱动      2.新增鼠标事件处理      3.新增文本控件

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -29,12 +29,16 @@ DEADLINE: <2022-06-12 周日 23:00 +1m> SCHEDULED: <2022-06-12 周日 09:00 +1m>
 | [2022-05-17] | house rent |   -2000 |
 | [2022-05-17] | shopping   |    -3.3 |
 | [2022-05-18] | shopping   |    -1.3 |
-| [2022-05-21] | takeout    | -80     |
+| [2022-05-21] | takeout    |     -80 |
 | [2022-05-25] | shopping   |    -3.5 |
 | [2022-05-28] | commute    |     -20 |
 | [2022-05-28] | shopping   |     -60 |
 | [2022-05-29] | takeout    |     -80 |
-|              |            | -2168.1 |
+| [2022-06-03] | takeout    |     -80 |
+| [2022-06-04] | takeout    |     -80 |
+| [2022-06-04] | fee        |    -100 |
+| [2022-06-05] | takeout    |     -50 |
+|              |            | -2458.1 |
 #+TBLFM: @>$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
 house rent: 2000, game: 445, takeout: 284, fee: 218, shopping: 1373, commute: 37
@@ -50,12 +54,20 @@ total: 4357
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-06-06 周一 23:00 ++1w> SCHEDULED: <2022-06-03 周五 18:00 ++1w>
+DEADLINE: <2022-06-13 周一 23:00 ++1w> SCHEDULED: <2022-06-10 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-05-30 周一 09:17]
+:LAST_REPEAT: [2022-06-06 周一 10:59]
 :END:
+- State "DONE"       from "TODO"       [2022-06-06 周一 10:59] \\
+  1. 同步游戏和编辑器中spine对象的设置
+  2. 屏蔽ui编辑器自定义扩展对图片的支持
+  3. 删除warui中无效控件关联的代码
+  4. 移除战斗之中的回合等待时间
+     - 根据目前的机制, 一个10人战斗空回合也需要执行30条战斗条指令, 大概需要0.5s左右的时间
+  -------------------------------
+  1. 周末爽terraria
 - State "DONE"       from "TODO"       [2022-05-30 周一 09:17] \\
   1. 完善总伤害跳字表现
   2. 优化英雄详情技能槽位
@@ -967,11 +979,13 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
-** TODO [#A] 减肥 [1/3]                                             :event:
-SCHEDULED: <2022-05-30 周一 17:27 ++1w>
+** TODO [#A] 减肥                                                   :event:
+SCHEDULED: <2022-06-06 周一 17:27 ++1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-05-30 周一 09:13]
+:LAST_REPEAT: [2022-06-06 周一 09:24]
 :END:
+- State "DONE"       from "TODO"       [2022-06-06 周一 09:24] \\
+  4.0, 70.0kg, 下雨
 - State "DONE"       from "TODO"       [2022-05-30 周一 09:13] \\
   3.5, 69.70kg, 下雨
 - State "DONE"       from "TODO"       [2022-05-23 周一 09:27] \\
@@ -997,9 +1011,6 @@ SCHEDULED: <2022-05-30 周一 17:27 ++1w>
 - State "DONE"       from "TODO"       [2022-03-06 周日 22:06] \\
   2.5->3.5->4.0, 76.1kg
 目前77kg, 计划减到65kg, 计划每周减0.5kg, 需要24个月
-- [X] 跑步一次 4.0km
-- [ ] 跑步一次 5.0km
-- [ ] 跑步一次 5.0km
 ** TODO [#A] 吉他学习                                               :event:
 SCHEDULED: <2022-06-05 周日 17:00 ++1w>
 :PROPERTIES:
