--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,10 +14,11 @@
 * Inbox
 * Next Action
 ** TODO [#C] 每周完成leetcode一道题 [1/1]                           :learn:
-SCHEDULED: <2022-06-06 周一 09:00 ++1w>
+SCHEDULED: <2022-06-13 周一 09:00 ++1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-05-30 周一 14:40]
+:LAST_REPEAT: [2022-06-06 周一 09:37]
 :END:
+- State "DONE"       from "TODO"       [2022-06-06 周一 09:37]
 - State "DONE"       from "TODO"       [2022-05-30 周一 14:40]
 - State "DONE"       from "TODO"       [2022-05-26 周四 15:44]
 - State "DONE"       from "TODO"       [2022-05-18 周三 16:31]
@@ -110,12 +111,13 @@ CLOCK: [2022-03-07 周一 17:25]--[2022-03-07 周一 17:50] =>  0:25
 CLOCK: [2022-03-07 周一 16:50]--[2022-03-07 周一 17:15] =>  0:25
 :END:
 - [X] 第一篇
-** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2022-06-04 周六 18:00 ++1w> DEADLINE: <2022-06-06 周一 12:00 ++1w>
+** TODO [#A] 完成每周周报                                             :work:
+SCHEDULED: <2022-06-11 周六 18:00 ++1w> DEADLINE: <2022-06-13 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-05-30 周一 09:17]
+:LAST_REPEAT: [2022-06-06 周一 10:58]
 :END:
+- State "DONE"       from "TODO"       [2022-06-06 周一 10:58]
 - State "DONE"       from "TODO"       [2022-05-30 周一 09:17]
 - State "DONE"       from "TODO"       [2022-05-23 周一 09:34]
 - State "DONE"       from "TODO"       [2022-05-14 周六 19:28]
@@ -180,69 +182,18 @@ SCHEDULED: <2022-06-04 周六 18:00 ++1w> DEADLINE: <2022-06-06 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** Archive                                                        :ARCHIVE:
-*** DONE [#A] 拆分站位和场景                                           :m8:
-CLOSED: [2022-05-18 周三 16:30] SCHEDULED: <2022-05-16 周一 13:12>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-05-30 周一 09:17
-:END:
-*** DONE [#A] 优化战前表现                                             :m8:
-CLOSED: [2022-05-20 周五 15:07] SCHEDULED: <2022-05-18 周三 16:32>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-05-30 周一 09:17
-:END:
-*** DONE [#A] 跳字显示总伤害                                           :m8:
-CLOSED: [2022-05-26 周四 14:33] SCHEDULED: <2022-05-20 周五 09:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-05-30 周一 09:17
-:END:
-*** DONE [#A] 优化英雄详情技能槽位                                     :m8:
-CLOSED: [2022-05-26 周四 14:33] SCHEDULED: <2022-05-26 周四 09:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-05-30 周一 09:17
-:END:
-** TODO [#A] 编写季度报告                                              :m8:
-SCHEDULED: <2022-05-31 周二 14:00>
+** DONE [#A] 编写季度报告                                              :m8:
+CLOSED: [2022-06-10 周五 16:42] SCHEDULED: <2022-05-31 周二 14:00>
+** DONE [#A] 整合项目编辑器                                            :m8:
+CLOSED: [2022-06-09 周四 20:34] SCHEDULED: <2022-06-07 周二 20:34>
+** DONE [#A] 编辑器资源替换                                            :m8:
+CLOSED: [2022-06-09 周四 20:35] SCHEDULED: <2022-06-08 周三 20:35>
+** DONE [#A] 战斗相关常量优化                                          :m8:
+CLOSED: [2022-06-10 周五 16:42] SCHEDULED: <2022-06-09 周四 20:36>
+** TODO [#A] 特殊跳字实现                                              :m8:
+SCHEDULED: <2022-06-10 周五 16:45>
 * Appointment
 * Project
-** Archive                                                         :ARCHIVE:
-*** DONE [#A] 战斗进度条                                               :m8:
-CLOSED: [2022-05-10 周二 09:15] SCHEDULED: <2022-04-24 周日 09:00> DEADLINE: <2022-04-30 周六 21:00>
-:PROPERTIES:
-:BLOCKER: children
-:ARCHIVE_TIME: 2022-05-16 周一 13:12
-:END:                          
-**** DONE 分析需求
-CLOSED: [2022-04-25 周一 13:24] SCHEDULED: <2022-04-25 周一 11:00>
-:PROPERTIES:                          
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:                          
-**** DONE 验证自身回合
-CLOSED: [2022-04-25 周一 13:26] SCHEDULED: <2022-04-25 周一 13:24>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-**** DONE 设计实现方案
-CLOSED: [2022-04-29 周五 15:02] SCHEDULED: <2022-04-25 周一 13:26>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-**** DONE 实现数据处理层
-CLOSED: [2022-04-29 周五 15:02] SCHEDULED: <2022-04-29 周五 15:02>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-**** DONE 实现界面层
-CLOSED: [2022-04-29 周五 15:02] SCHEDULED: <2022-04-29 周五 15:02>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-**** DONE 测试
-CLOSED: [2022-05-10 周二 09:15] SCHEDULED: <2022-04-29 周五 15:02>
-:PROPERTIES:                          
-:TRIGGER+: parent todo!(DONE)
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
 ** TODO [#A] 优化spine编辑器                                           :m8:
 SCHEDULED: <2022-05-18 周三 16:32> DEADLINE: <2022-06-01 周三 16:32>
 :PROPERTIES:
