--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -111,12 +111,13 @@ CLOCK: [2022-03-07 周一 17:25]--[2022-03-07 周一 17:50] =>  0:25
 CLOCK: [2022-03-07 周一 16:50]--[2022-03-07 周一 17:15] =>  0:25
 :END:
 - [X] 第一篇
-** TODO [#A] 完成每周周报                                             :work:
-SCHEDULED: <2022-06-11 周六 18:00 ++1w> DEADLINE: <2022-06-13 周一 12:00 ++1w>
+** TODO [#A] 完成每周周报                                            :work:
+SCHEDULED: <2022-06-18 周六 18:00 ++1w> DEADLINE: <2022-06-20 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-06-06 周一 10:58]
+:LAST_REPEAT: [2022-06-11 周六 17:53]
 :END:
+- State "DONE"       from "TODO"       [2022-06-11 周六 17:53]
 - State "DONE"       from "TODO"       [2022-06-06 周一 10:58]
 - State "DONE"       from "TODO"       [2022-05-30 周一 09:17]
 - State "DONE"       from "TODO"       [2022-05-23 周一 09:34]
@@ -182,16 +183,29 @@ SCHEDULED: <2022-06-11 周六 18:00 ++1w> DEADLINE: <2022-06-13 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** DONE [#A] 编写季度报告                                              :m8:
-CLOSED: [2022-06-10 周五 16:42] SCHEDULED: <2022-05-31 周二 14:00>
-** DONE [#A] 整合项目编辑器                                            :m8:
-CLOSED: [2022-06-09 周四 20:34] SCHEDULED: <2022-06-07 周二 20:34>
-** DONE [#A] 编辑器资源替换                                            :m8:
-CLOSED: [2022-06-09 周四 20:35] SCHEDULED: <2022-06-08 周三 20:35>
-** DONE [#A] 战斗相关常量优化                                          :m8:
-CLOSED: [2022-06-10 周五 16:42] SCHEDULED: <2022-06-09 周四 20:36>
 ** TODO [#A] 特殊跳字实现                                              :m8:
 SCHEDULED: <2022-06-10 周五 16:45>
+** Archive                                                        :ARCHIVE:
+*** DONE [#A] 编写季度报告                                             :m8:
+CLOSED: [2022-06-10 周五 16:42] SCHEDULED: <2022-05-31 周二 14:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-06-11 周六 17:53
+:END:
+*** DONE [#A] 整合项目编辑器                                           :m8:
+CLOSED: [2022-06-09 周四 20:34] SCHEDULED: <2022-06-07 周二 20:34>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-06-11 周六 17:53
+:END:
+*** DONE [#A] 编辑器资源替换                                           :m8:
+CLOSED: [2022-06-09 周四 20:35] SCHEDULED: <2022-06-08 周三 20:35>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-06-11 周六 17:53
+:END:
+*** DONE [#A] 战斗相关常量优化                                         :m8:
+CLOSED: [2022-06-10 周五 16:42] SCHEDULED: <2022-06-09 周四 20:36>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-06-11 周六 17:53
+:END:
 * Appointment
 * Project
 ** TODO [#A] 优化spine编辑器                                           :m8:
